Update AiderHelper.java